[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/fundo.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Bird.gd" type="Script" id=3]
[ext_resource path="res://Assets/passaro-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/passaro-2.png" type="Texture" id=5]
[ext_resource path="res://Assets/passaro-3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sons/somVoa.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scripts/Generator.gd" type="Script" id=8]
[ext_resource path="res://Assets/font.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Sons/somScore.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]

resource_name = "Scroll"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackAnim/Back1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -720, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackAnim/Back2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 720, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 47.0616, 17.3693 )

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 720.229, 0.085907 )

[sub_resource type="DynamicFont" id=5]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="BackAnim" type="AnimationPlayer" parent="." index="0"]

editor/display_folded = true
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Scroll = SubResource( 1 )
blend_times = [  ]

[node name="Back1" type="Sprite" parent="BackAnim" index="0"]

position = Vector2( -686.523, 0 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Back2" type="Sprite" parent="BackAnim" index="1"]

position = Vector2( 33.4765, 0 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Transform" ]

[node name="Bird" type="RigidBody2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 104.509, 443.71 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 1
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 14.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="Bird" index="0"]

scale = Vector2( 0.7, 0.7 )
frames = SubResource( 2 )
animation = "default"
frame = 1
playing = true
_sections_unfolded = [ "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="Bird" index="1"]

position = Vector2( 11.3609, 0 )
shape = SubResource( 3 )

[node name="Audio" type="AudioStreamPlayer" parent="Bird" index="2"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Limits" type="StaticBody2D" parent="." index="2"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Up" type="CollisionShape2D" parent="Limits" index="0"]

shape = SubResource( 4 )

[node name="Down" type="CollisionShape2D" parent="Limits" index="1"]

position = Vector2( 0, 1277.71 )
shape = SubResource( 4 )

[node name="Generator" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.5
one_shot = false
autostart = false
script = ExtResource( 8 )

[node name="LabelScore" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 720.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="LabelStart" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 69.0
margin_top = 604.0
margin_right = 769.0
margin_bottom = 677.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Toque para Iniciar!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TimerReplay" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="AudioScore" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 10 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="Generator" to="Generator" method="_on_Generator_timeout"]

[connection signal="timeout" from="TimerReplay" to="." method="_on_TimerReplay_timeout"]


